demos/32-operator-loop/policies/shop-frontend-merged.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
    labels:
        app.kubernetes.io/component: frontend
        app.kubernetes.io/managed-by: cf2cnp
        app.kubernetes.io/name: shop
    name: shop-frontend
    namespace: cf2cnp-lab27
spec:
    description: Allow ingress traffic from cf2cnp-lab27 to cf2cnp-lab27 for the shop
    endpointSelector:
        matchLabels:
            app.kubernetes.io/component: frontend
            app.kubernetes.io/name: shop
    ingress:
        - fromEndpoints:
            - matchLabels:
                app.kubernetes.io/name: pos
          toPorts:
            - ports:
                - port: "80"
                  protocol: TCP
        - fromEndpoints:
            - matchLabels:
                app.kubernetes.io/name: kiosk
          toPorts:
            - ports:
                - port: "80"
                  protocol: TCP
